--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -44,6 +44,7 @@ jobs:
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+
       - name: Install Code Coverage tool
         shell: powershell
         run: dotnet tool install --global JetBrains.dotCover.GlobalTool
@@ -53,7 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           EXCLUDE_FROM_COVERAGE:
-            "**/Program.cs, **/Middlewares/, **/Validators/, **/Extensions/*, **/Exceptions/, **/Constants/, **/Mappers/, **/Context/**/, **/Migrations/*,**/Configuration/, **/FixtureCustomizations/, **/Managers/*"
+            "**/Program.cs, **/Middlewares/"
         shell: powershell
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
