--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -53,12 +53,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE:
-            "**/Program.cs, **/Middlewares/"
+          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/"
         shell: powershell
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
           dotnet build --no-restore
-          dotnet dotcover test --dcReportType=HTML
+          dotnet test --collect:"XPlat Code Coverage"
           dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
