--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -45,20 +45,18 @@ jobs:
           New-Item -Path .\.sonar\scanner -ItemType Directory
           dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
 
-      - name: Install Code Coverage tool
-        working-directory: ${{ github.workspace }}
-        shell: powershell
-        run: dotnet tool install --global JetBrains.dotCover.GlobalTool
-
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/"
+          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/, /Validators/, /Extensions/*, /Exceptions/, /Constants/, /Mappers/, /Context//, /Migrations/*, /Configuration/, /FixtureCustomizations/, **/Managers/*"
         shell: powershell
         run: |
-          dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          dotnet tool restore
+          $toolPath = Get-Command dotnet-sonarscanner | ForEach-Object { Split-Path $_.Source }
+          $sonarScannerPath = Join-Path $toolPath ".store\dotnet-sonarscanner\5.2.2\dotnet-sonarscanner\5.2.2\tools\net5.0\any"
+          & $sonarScannerPath\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
           dotnet build --no-restore
-          dotnet test --collect:"XPlat Code Coverage"
-          dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          dotnet dotcover test --dcReportType=HTML
+          & $sonarScannerPath\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
