--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -52,6 +52,7 @@ jobs:
           EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/, /Validators/, /Extensions/*, /Exceptions/, /Constants/, /Mappers/, /Context//, /Migrations/*, /Configuration/, /FixtureCustomizations/, **/Managers/*"
         shell: powershell
         run: |
+          dotnet tool install --global dotnet-sonarscanner --version 5.2.2
           $sonarScannerPath = Get-Command dotnet-sonarscanner | ForEach-Object { Split-Path $_.Source }
           & "$sonarScannerPath" begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
