--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,13 +49,12 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/, /Validators/, /Extensions/*, /Exceptions/, /Constants/, /Mappers/, /Context//, /Migrations/*, /Configuration/, /FixtureCustomizations/, **/Managers/*"
+          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/, /Validators/, /Extensions/*, /Exceptions/, /Constants/"
         shell: powershell
         run: |
           dotnet tool install --global dotnet-sonarscanner --version 5.2.2
-          $sonarScannerPath = Get-Command dotnet-sonarscanner | ForEach-Object { Split-Path $_.Source }
-          & "$sonarScannerPath" begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          & dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
           dotnet restore
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
-          & "$sonarScannerPath" end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          & dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
