--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,23 +1,22 @@
 name: SonarCloud
 on:
-  pull_request:
-    branches: ["main"]
-
+    pull_request:
+      branches: ["main"]
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     steps:
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
-          distribution: "zulu"
+          distribution: 'zulu'
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      # Install the .NET Core workload
+      
       - name: Install .NET Core
         uses: actions/setup-dotnet@v3
         with:
@@ -49,12 +48,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          EXCLUDE_FROM_COVERAGE: "/Program.cs, /Middlewares/, /Validators/, /Extensions/*, /Exceptions/, /Constants/"
         shell: powershell
         run: |
-          dotnet tool install --global dotnet-sonarscanner --version 5.2.2
-          & dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
-          & dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
