--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,21 +1,22 @@
 name: SonarCloud
 on:
-  pull_request:
-    branches: ["main"]
+    pull_request:
+      branches: ["main"]
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     steps:
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
-          distribution: "zulu"
+          distribution: 'zulu'
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      
       - name: Install .NET Core
         uses: actions/setup-dotnet@v3
         with:
@@ -51,8 +52,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         shell: powershell
         run: |
-          dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}" /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
+          dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet restore
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
+          dotnet dotcover analyze --output=coverage.xml --filters=-:module=CatNote.Tests*
           dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
