--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -56,5 +56,5 @@ jobs:
           dotnet restore
           dotnet build --no-restore
           dotnet dotcover test --dcReportType=HTML
-          dotnet dotcover analyze --output=coverage.xml --filters=-:module=CatNote.Tests*
+          dotnet dotcover analyze --output=coverage.xml --filters=-:module=CatNote.IntegrationTests*
           dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
