--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -1,22 +1,21 @@
 name: SonarCloud
 on:
-    pull_request:
-      branches: ["main"]
+  pull_request:
+    branches: ["main"]
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     steps:
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
-          distribution: 'zulu'
+          distribution: "zulu"
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      
+
       - name: Install .NET Core
         uses: actions/setup-dotnet@v3
         with:
@@ -58,4 +57,11 @@ jobs:
           dotnet dotcover test --no-build
           dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
+      - name: Upload SonarCloud properties
+        uses: actions/upload-artifact@v2
+        with:
+          name: sonar-properties
+          path: |
+            C:\Users\runneradmin\.dotnet\tools\.store\dotnet-sonarscanner\5.14.0\dotnet-sonarscanner\5.14.0\tools\net5.0\any\sonar-scanner-4.8.1.3023\bin\..\conf\sonar-scanner.properties
+            D:\a\CatNote\CatNote\.sonarqube\out\sonar-project.properties
         # dotnet dotcover test --dcReportType=HTML
