--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,6 +49,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          EXCLUDE_FROM_COVERAGE:
+            "**/Program.cs, **/Middlewares/, **/Validators/, **/Exceptions/, **/Mappers/, **/Migrations/*"
         shell: powershell
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.jacoco.xmlReportPaths="build/reports/jacoco/test/jacocoTestReport.xml"
