--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -49,7 +49,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          INCLUDE_IN_COVERAGE:
+          EXCLUDE_FROM_COVERAGE:
             "**/Program.cs, **/Middlewares/, **/Validators/, **/Exceptions/, **/Mappers/, **/Migrations/*"
         shell: powershell
         run: |
