--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -50,7 +50,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           EXCLUDE_FROM_COVERAGE:
-            "**/Program.cs, **/Middlewares/, **/Validators/, **/Exceptions/, **/Mappers/, **/Migrations/*"
+            ""
         shell: powershell
         run: |
           dotnet sonarscanner begin /k:"Finka95_CatNote" /o:"finka95" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.coverage.exclusions="${{ env.EXCLUDE_FROM_COVERAGE }}"  /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html
@@ -92,3 +92,4 @@ jobs:
       #     path: |
       #       d:\sonar.coverage.jacoco/build/reports/jacoco/test/jacocoTestReport.xml
         # dotnet dotcover test --dcReportType=HTML
+        #**/Program.cs, **/Middlewares/, **/Validators/, **/Exceptions/, **/Mappers/, **/Migrations/*
