--- a/backend/CatNote.API/appsettings.json
+++ b/backend/CatNote.API/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=CatNote;Trusted_Connection=True;Trust Server Certificate=True;"
+  },
+  "Auth0": {
+    "Domain": "dev-ujxvenaomkidb36h.us.auth0.com",
+    "Audience": "https://localhost:7165/api"
   }
 }
