--- a/CatNote.API/appsettings.json
+++ b/CatNote.API/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=CatNote;Trusted_Connection=True;Trust Server Certificate=True;"
+  },
+  "Auth0": {
+    "Domain": "dev-ujxvenaomkidb36h.us.auth0.com",
+    "Audience": "https://localhost:7165/api",
+    "ClientSecret": "",
+    "ClientId": ""
   }
 }
